--- a/static/styles/format.css
+++ b/static/styles/format.css
@@ -43,14 +43,14 @@
 .banner-container {
     position: relative;
     bottom: -5.5em;
-    height: 49.5em;
+    height: 44.5em;
 }
 .banner {
     background-image: url('../images/northbeach.jpg');
     background-position: center;
     position: relative;
     top: -5.5em;
-    height: 55em;
+    height: 50em;
 }
 
 
@@ -129,7 +129,11 @@ section img {
     margin-right: auto;
 }
 
-#seal {
+section a {
+    color: #333;
+}
+
+.seal {
     padding-top: 6em;
 }
 
@@ -162,12 +166,21 @@ h3 {
 .shaded {
     background: rgba(255, 255, 255, .4);
 }
+.extra-shaded {
+    background: rgba(255, 255, 255, .6);
+}
 .col-2:first-child {
     margin-left: 10%;
 }
 .col-2:last-child {
     float: right;
     margin-right: 10%;
+}
+
+.col-3 {
+    width: 20%;
+    margin: 6%;
+    float: left;
 }
 
 #cormorant {
@@ -185,13 +198,31 @@ h3 {
     height: 40em;
 }
 
+#visitors {
+    background-image: url('../images/sutro.jpg');
+    background-position: center;
+    height: 40em;
+}
+
+#businesses {
+    background-image: url('../images/goddesses.jpg');
+    background-position: center;
+    height: 40em;
+}
+
+#library {
+    background-image: url('../images/library.jpg');
+    background-position: center;
+    height: 40em;
+}
+
 .navigation {
     text-align: center;
     font-family: filosofiagrand, garamond, georgia, serif;
     letter-spacing: .1em;
     text-transform: uppercase;
     font-size: 1.25em;
-    background: rgba(51, 51, 51, .4);
+    background: rgba(51, 51, 51, .6);
 }
 
 .navigation li {
@@ -215,5 +246,21 @@ small {
     font-family: filosofiaitalic, garamond, georgia, serif;
     font-size: .5em;
     display: block;
+}
+em {
+    font-style: normal;
+    font-family: filosofiaitalic, garamond, georgia, serif;
+}
+
+#footer ul {
+    padding-top: 1em;
+}
+
+#footer li {
+    list-style: none;
+}
+
+#footer li span {
+    cursor: pointer;
 }
 
