--- a/templates/library.html
+++ b/templates/library.html
@@ -35,7 +35,7 @@
         <h1>Public Library</h1>
     </header>
 
-    <section>
+    <section id="catalogue">
         <div class="section-container">
             <h3>Catalogue</h3>
             <div class="carousel-container">
@@ -46,6 +46,19 @@
                 </div>
                 {% endfor %}
             </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="map">
+        <div class="section-container">
+            <div class="col-1 narrow extra-shaded">
+                <h3>Visit The Library</h3>
+                <p><strong>
+                    Sutro Branch Library<br>
+                    1090 Point Lobos Ave<br>
+                    Corvus Marinus, CA 94121
+                </strong></p>
             </div>
         </div>
     </section>
