--- a/templates/library.html
+++ b/templates/library.html
@@ -70,6 +70,7 @@
             </div>
                 
         </div>
+
     </section>
 
     <section id="map">
@@ -83,6 +84,30 @@
                 </strong></p>
             </div>
         </div>
+    </section>
+    <section>
+        <div class="section-container" id="footer">
+            <div class="col-3 shaded">
+                <h3>Services</h3>
+                <ul>
+                    <li><span>Get a library card</span></li>
+                    <li><span>Renew items</span></li>
+                    <li><span>Reserve computers</span></li>
+                    <li><span>Jobs &amp; Career Resources</span></li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <a href="/"><img src="static/images/seal.png" alt="the seal of the city and county of corvus marinus"></a>
+            </div>
+            <div class="col-3 shaded">
+                <h3>About</h3>
+                <ul>
+                    <li><span>At the Library 2014</span></li>
+                    <li><span>New Literacy Center</span></li>
+                    <li><span>Advisory &amp; Support Groups</span></li>
+                    <li><span>Friends of CMPL</span></li>
+                </ul>
+            </div>
     </section>
 
 </body>
