Adds twitter links, trackers for wiki

--- a/static/styles/format.css
+++ b/static/styles/format.css
@@ -185,6 +185,8 @@ em {
     list-style: none;
 }
 
-#footer li span, .link {
+#footer li span, .link, a {
     cursor: pointer;
+    text-decoration: none;
+    color: #333;
 }
