--- a/templates/library.html
+++ b/templates/library.html
@@ -82,6 +82,9 @@
                     1090 Point Lobos Ave<br>
                     Corvus Marinus, CA 94121
                 </strong></p>
+                <p><strong>
+                    Follow us on twitter: <a href="https://twitter.com/cmpubliclibrary" target="_blank">@CMPublicLibrary</a>
+                </strong></p>
             </div>
         </div>
     </section>
@@ -106,6 +109,7 @@
                     <li><span>New Literacy Center</span></li>
                     <li><span>Advisory &amp; Support Groups</span></li>
                     <li><span>Friends of CMPL</span></li>
+                    <li><a href="https://twitter.com/cmpubliclibrary" target="_blank">CMPL on twitter</a></li>
                 </ul>
             </div>
     </section>
