--- a/templates/wiki-moma.html
+++ b/templates/wiki-moma.html
@@ -2,6 +2,16 @@
 <!-- saved from url=(0035)http://en.wikipedia.org/wiki/CMMOMA -->
 <html lang="en" dir="ltr" class="client-js ve-not-available"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53683642-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 <title>Corvus Marinus Museum of Modern Art - Wikipedia, the free encyclopedia</title>
 <meta name="generator" content="MediaWiki 1.24wmf15">
 <link rel="alternate" href="android-app://org.wikipedia/http/en.m.wikipedia.org/wiki/Corvus_Marinus_Museum_of_Modern_Art">
